IG: replace with List.of() in when available (IDEA-255165)
in "Call to 'Arrays.asList()' with too few arguments" inspection

GitOrigin-RevId: e76f6432bdf43f0154b3b83cf1d50c8e1a069467