@@ -2,6 +2,8 @@
 package com.siyeh.ig.fixes.performance;
 
 import com.intellij.codeInspection.CommonQuickFixBundle;
+import com.intellij.pom.java.LanguageLevel;
+import com.intellij.testFramework.builders.JavaModuleFixtureBuilder;
 import com.siyeh.ig.BaseInspection;
 import com.siyeh.ig.IGQuickFixesTestCase;
 import com.siyeh.ig.performance.ArraysAsListWithZeroOrOneArgumentInspection;
@@ -9,43 +11,48 @@ import com.siyeh.ig.performance.ArraysAsListWithZeroOrOneArgumentInspection;
 /**
  * @author Bas Leijdekkers
  */
-public class ArraysAsListWithZeroOrOneArgumentFixTest extends IGQuickFixesTestCase {
+public class ArraysAsListWithZeroOrOneArgumentFixJava9Test extends IGQuickFixesTestCase {
 
   public void testZeroArguments() {
-    doTest(CommonQuickFixBundle.message("fix.replace.with.x", "Collections.emptyList()"),
+    doTest(CommonQuickFixBundle.message("fix.replace.with.x", "List.of()"),
            "import java.util.*;\n" +
            "class X {{\n" +
            "    Arrays.asList/**/();\n" +
            "}}",
            "import java.util.*;\n" +
            "class X {{\n" +
-           "    Collections.emptyList();\n" +
+           "    List.of();\n" +
            "}}");
   }
 
   @SuppressWarnings("RedundantOperationOnEmptyContainer")
   public void testZeroArgumentsWithType() {
-    doTest(CommonQuickFixBundle.message("fix.replace.with.x", "Collections.emptyList()"),
+    doTest(CommonQuickFixBundle.message("fix.replace.with.x", "List.of()"),
            "import java.util.*;\n" +
            "class X {{\n" +
            "    Spliterator<String> it = Arrays.<String>/**/asList().spliterator();\n" +
            "}}",
            "import java.util.*;\n" +
            "class X {{\n" +
-           "    Spliterator<String> it = Collections.<String>emptyList().spliterator();\n" +
+           "    Spliterator<String> it = List.<String>of().spliterator();\n" +
            "}}");
   }
 
   public void testOneArgument() {
-    doTest(CommonQuickFixBundle.message("fix.replace.with.x", "Collections.singletonList()"),
+    doTest(CommonQuickFixBundle.message("fix.replace.with.x", "List.of()"),
            "import java.util.*;" +
            "class X {{\n" +
            "  List<Map<String, String>> list = Arrays./**/asList(new HashMap<>());" +
            "}}",
            "import java.util.*;" +
            "class X {{\n" +
-           "  List<Map<String, String>> list = Collections.singletonList(new HashMap<>());" +
+           "  List<Map<String, String>> list = List.of(new HashMap<>());" +
            "}}");
+  }
+
+  @Override
+  protected void tuneFixture(JavaModuleFixtureBuilder builder) throws Exception {
+    builder.setLanguageLevel(LanguageLevel.JDK_1_9);
   }
 
   @Override
